
name:                darkplaces-demo
version:             0.1
synopsis:            Utility and parser for DarkPlaces demo files
-- description:         
license:             GPL-2
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     DarkPlaces.Demo,
                       DarkPlaces.Types,
                       DarkPlaces.Binary,
                       DarkPlaces.PacketParser,
                       DarkPlaces.ProtocolConstants
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       bytestring >=0.10 && <0.11,
                       binary >=0.7 && <0.8,
                       transformers >=0.3 && <0.4,
                       data-binary-ieee754 >=0.4 && <0.5,
                       containers >=0.5 && <0.6

  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -fno-warn-name-shadowing
  ghc-prof-options:    -prof -auto-all -fprof-auto -caf-all

  default-language:    Haskell2010

benchmark bench-darkplaces-demo
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmarks
  main-is:             bench-parser.hs
  ghc-options:         -O2 -Wall -fno-warn-name-shadowing
  build-depends:       base >=4.7 && <4.8,
                       bytestring >=0.10 && <0.11,
                       transformers >=0.3 && <0.4,
                       binary >=0.7 && <0.8,
                       darkplaces-demo,
                       criterion

source-repository head
  type:                git
  location:            https://github.com/bacher09/darkplaces-demo
